Clenaups
Noticed unwanted jakarta changes during merge due to record refactoring.